--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,45 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 250px;
   padding: 20px;
   color: white;
 }
 
+.App-title {
+  font-size: 1.5em;
+}
+
+.main-wrapper {
+  margin: 40px;
+}
+
 .App-intro {
   font-size: large;
+}
+
+a {
+  font-size: 20px;
+  margin: 20px;
+}
+
+ul {
+  padding: 0;
+}
+
+li {
+  list-style: none;
+}
+
+.route-link-container {
+  margin: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.animal-info {
+  color: royalblue;
 }
 
 @keyframes App-logo-spin {
